Debug layout issues

--- a/app/resources/style/event.scss
+++ b/app/resources/style/event.scss
@@ -7,6 +7,10 @@
 #home-body {
   margin: 20px 10%;
 
+  .user-thumbnail {
+    max-width: 30px;
+  }
+
   #event-list {
     display: flex;
     flex-wrap: wrap;
